# orca-quote-machine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  example.env  nginx.conf  poc_orcaslicer.py  pyproject.toml  result.json
.claude/: settings.json
.claude/commands/: debug-async.md  dev.md  format.md  lint.md  prime.md  reflection.md  review.md  rust-calc.md  slice.md  test.md
.github/workflows/: ci.yml
ai_docs/: orca-quote-machine-repomix.xml
app/: __init__.py  dependencies.py  main.py  tasks.py
app/core/: config.py
app/models/: quote.py
app/services/: pricing.py  slicer.py  telegram.py
config/slicer_profiles/filament/: ALT TABL MATTE PLA PEI.info  ALT TABL MATTE PLA PEI.json  Alt Tab PETG.info  Alt Tab PETG.json  Alt Tab PLA+ 0.2.info  Alt Tab PLA+ 0.2.json  Alt Tab PLA+.info  Alt Tab PLA+.json  Bambulab PLA Basic.info  Bambulab PLA Basic.json  Kexcelled K5M PEI.info  Kexcelled K5M PEI.json  Kexcelled K5M.info  Kexcelled K5M.json  Polymaker PETG G11.info  Polymaker PETG G11.json  Polymaker PETG PEI - smol nozzle.info  Polymaker PETG PEI - smol nozzle.json  Polymaker PETG PEI.info  Polymaker PETG PEI.json  Polymaker PETG.info  Polymaker PETG.json  Polymaker Polylite PC.info  Polymaker Polylite PC.json  Prusament ASA.info  Prusament ASA.json  Qidi PLA Rapido.info  Qidi PLA Rapido.json  Qwensy PETG Hyper G11.info  Qwensy PETG Hyper G11.json  Qwensy PETG Hyper.info  Qwensy PETG Hyper.json  RatRig Generic ASA - Copy.info  RatRig Generic ASA - Copy.json  RatRig Generic PETG - Copy.info  RatRig Generic PETG - Copy.json  Sunlu High Speed Matte PETG.info  Sunlu High Speed Matte PETG.json  TPU PEI.info  TPU PEI.json  (+24 more)
config/slicer_profiles/machine/: RatRig V-Core 3 400 0.5 nozzle.info  RatRig V-Core 3 400 0.5 nozzle.json
config/slicer_profiles/process/: 0.1mm RatRig 0.2mm nozzle - slower.info  0.1mm RatRig 0.2mm nozzle - slower.json  0.20mm RatRig 0.4mm nozzle.info  0.20mm RatRig 0.4mm nozzle.json  0.20mm RatRig 0.6mm PLA.info  0.20mm RatRig 0.6mm PLA.json  0.20mm Standard @RatRig - Copy.info  0.20mm Standard @RatRig - Copy.json  0.20mm Standard @RatRig - test.info  0.20mm Standard @RatRig - test.json  0.25mm RatRig 0.5mm nozzle - slower - fuzzy.info  0.25mm RatRig 0.5mm nozzle - slower - fuzzy.json  0.25mm RatRig 0.5mm nozzle - slower.info  0.25mm RatRig 0.5mm nozzle - slower.json  0.25mm RatRig 0.5mm nozzle.info  0.25mm RatRig 0.5mm nozzle.json  0.2mm RatRig 0.5mm nozzle.info  0.2mm RatRig 0.5mm nozzle.json  0.30mm RatRig 0.6mm PLA.info  0.30mm RatRig 0.6mm PLA.json  50_3000_PA.info  50_3000_PA.json  PA.info  PA.json
scripts/: format.sh  production-server.sh  setup.sh  test.sh  web-server.sh  worker.sh
specs/: code-review-2.md  code-review-3.md
src/: lib.rs
src/orca_quote_machine/: dependencies.py  main.py  tasks.py
src/orca_quote_machine/models/: quote.py
src/orca_quote_machine/services/: pricing.py  slicer.py  telegram.py
templates/: index.html
tests/: __init__.py  conftest.py  pytest.ini  test_config.py  test_main.py  test_tasks.py
tests/integration/: test_quote_workflow.py
tests/models/: test_quote.py
tests/services/: test_pricing.py  test_slicer.py  test_telegram.py
tests/unit/: test_main_logic.py  test_pricing_logic.py  test_slicer_logic.py  test_task_logic.py
