[package]
name = "orca-quote-machine"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.pyo3-asyncio]
version = "0.20"
features = ["attributes", "tokio-runtime"]